[package]
name = "naskah"
version = "0.1.0"
authors = ["Fatih Kalifa <fatihkalifa@gmail.com>"]
repository = "https://github.com/pveyes/naskah"
description = "Bahasa pemrograman dengan sintaks Bahasa Indonesia"
license = "MIT"

[workspace]

members = [
  "demo",
  "parser",
  "printer"
]

[dependencies]
